<resources>
    <string name="app_name">みんなでやろ!</string>
    <string name="action_settings">Settings</string>
    <string name="add_schedule">スケジュールを追加します</string>
    <string name="added_schedule">スケジュールを追加しました</string>
    <string name="menu_item_delete">タスクを削除します</string>
    <string name="label_title">やること</string>
    <string name="label_date">時間</string>
    <string name="label_place">場所</string>
    <string name="label_belongingList">持ち物</string>
    <string name="save_schedule">保存</string>
    <string name="title_app">みんなでやろ！</string>
    <string name="title_date">日にち</string>
</resources>
